--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 
-*{margin-top: 20px;
+/* *{margin-top: 20px;
 
-}
+} */
 .App {
-  display: flex;
+  display:flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap:wrap;
   
 };
